@startuml

title __COMPANY's Class Diagram__\n

  package com.company {
    class Character {
        # nama : String
        # asal : String
        # pekerjaan : String
        + Character()
        + getNama()
        + getAsal()
        + getPekerjaan()
    }
  }
  

  package com.company {
    class Main {
        {static} + main()
    }
  }
  

  package com.company {
    class Pendukung {
        - relate : String
        + Pendukung()
        + getRelate()
        + displayCharacter()
    }
  }
  

  package com.company {
    class Utama {
        + Utama()
        + displayCharacter()
    }
  }
  

  Pendukung -up-|> Character
  Utama -up-|> Character


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
